# sapta_ml

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  sapta.ipynb
.github/workflows/: ci.yml
assets/: README.md
configs/: default.yaml
data/: README.md
models/: README.md
notebooks/: 01_sapta_demo.ipynb
scripts/: run.ps1  run_pipeline.py
src/sapta/: __init__.py  config.py
src/sapta/data/: __init__.py  synthetic.py
src/sapta/dispatch/: __init__.py  greedy.py
src/sapta/scoring/: __init__.py  adapters.py  engine.py
src/sapta/viz/: __init__.py  maps.py
tests/: test_dispatch.py  test_scoring.py
